# document-automater

./: .gitignore  README.md  log.md  main.py  pyproject.toml
sec_reports/: client.py  companies.yaml  converter.py  filings.py  main.py  models.py  resolver.py  settings.py
