[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-automater"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "playwright>=1.40",
    "requests>=2.31",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
]

[project.scripts]
fetch-reports = "sec_reports.main:run"

[tool.hatch.build.targets.wheel]
packages = ["sec_reports"]

[dependency-groups]
dev = [
    "black>=26.3.1",
]

